--- a/Tesis_latex/referencias.bib
+++ b/Tesis_latex/referencias.bib
@@ -5,6 +5,13 @@
   publisher={Addison-Wesley}
 }
 
+@book{balinski1982fair,
+  title={Fair Representation, Meeting the Ideal of One Man, One Vote},
+  author={ Balinski and Young},
+  year={2001},
+  publisher={Brookings Institution Press}
+}
+
 @article{einstein1905,
   author={Einstein, Albert},
   title={Zur Elektrodynamik bewegter Körper},
