--- a/Tesis_latex/main.tex
+++ b/Tesis_latex/main.tex
@@ -15,11 +15,10 @@
 \listoftables
 
 % Capítulos
-\include{capitulos/01_introduccion}
-\include{capitulos/02_marco_teorico}
-\include{capitulos/03_metodologia}
-\include{capitulos/04_resultados}
-\include{capitulos/05_conclusiones}
+\include{capitulos/1_introduccion}
+\include{capitulos/2_marco_teorico}
+\include{capitulos/n_notas}
+
 
 % Bibliografía
 \printbibliography
@@ -27,6 +26,5 @@
 % Anexos
 \appendix
 \include{anexos/anexo_a}
-\include{anexos/anexo_b}
 
 \end{document}
