--- a/Tesis_latex/referencias.bib
+++ b/Tesis_latex/referencias.bib
@@ -1,14 +1,21 @@
-@book{knuth1984texbook,
-  title={The TeXbook},
-  author={Knuth, Donald E.},
-  year={1984},
-  publisher={Addison-Wesley}
+@book{pukkelsheim2017,
+  title={Proportional Representation},
+  author={Pukkelsheim, Friedrich},
+  year={2017},
+  publisher={Springer}
 }
 
 @book{balinski1982fair,
   title={Fair Representation, Meeting the Ideal of One Man, One Vote},
   author={ Balinski and Young},
   year={2001},
+  publisher={Brookings Institution Press}
+}
+
+@book{balinski1980theory,
+  title={The Theory of Apportionment},
+  author={Balinski and Young},
+  year={},
   publisher={Brookings Institution Press}
 }
 
@@ -20,4 +27,30 @@
   number={10},
   pages={891--921},
   year={1905}
+}
+
+@inbook{doi:10.1137/1.9781611978322.39,
+author = {Javier Cembrano and José Correa and Ulrike Schmidt-Kraepelin and Alexandros Tsigonias-Dimitriadis and Victor Verdugo},
+title = {New Combinatorial Insights for Monotone Apportionment},
+booktitle = {Proceedings of the 2025 Annual ACM-SIAM Symposium on Discrete Algorithms (SODA)},
+chapter = {},
+pages = {1308-1328},
+doi = {10.1137/1.9781611978322.39},
+URL = {https://epubs.siam.org/doi/abs/10.1137/1.9781611978322.39},
+eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611978322.39},
+    abstract = { Abstract The apportionment problem constitutes a fundamental problem in democratic societies: How to distribute a fixed number of seats among a set of states in proportion to the states’ populations? This—seemingly simple—task has led to a rich literature and has become well known in the context of the US House of Representatives. In this paper, we connect the design of monotone apportionment methods to classic problems from discrete geometry and combinatorial optimization and explore the extent to which randomization can enhance proportionality. We first focus on the well-studied family of stationary divisor methods, which satisfy the strong population monotonicity property, and show that this family produces only a slightly superlinear number of different outputs as a function of the number of states. While our upper and lower bounds leave a small gap, we show that—surprisingly—closing this gap would solve a long-standing open problem from discrete geometry, known as the complexity of k-levels in line arrangements. The main downside of divisor methods is their violation of the quota axiom, i.e., every state should receive ⌊qi ⌋ or ⌈qi ⌉ seats, where qi is the proportional share of the state. As we show that randomizing over divisor methods can only partially overcome this issue, we propose a relaxed version of divisor methods in which the total number of seats may slightly deviate from the house size. By randomizing over these methods, we can simultaneously satisfy population monotonicity, quota, and ex-ante proportionality. Finally, we turn our attention to quota-compliant methods that are house-monotone, i.e., no state may lose a seat when the house size is increased. We provide a polyhedral characterization based on network flows, which implies a simple description of all ex-ante proportional randomized methods that are house-monotone and quota-compliant. }
+}
+
+@incollection{kurian2011droop,
+  author    = {George Kurian},
+  title     = {Droop Quota},
+  booktitle = {The Encyclopedia of Political Science},
+  editor    = {George Kurian},
+  year      = {2011},
+  publisher = {CQ Press},
+  address   = {Washington, DC},
+  pages     = {451--451},
+  doi       = {10.4135/9781608712434.n455},
+  url       = {https://sk.sagepub.com/ency/edvol/the-encyclopedia-of-political-science/chpt/droop-quota},
+  note      = {SAGE Publications, Inc., Sage Knowledge Database}
 }
